--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Este es mi primer web sracping usando Playwright para obtener precios de los 3 principales supermercados peruanos.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
   },
   "devDependencies": {
     "standard": "^17.1.2"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
